<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">FeedList</string>
    <string name="intro_message">This sample demonstrates how to get rss feeds off of network into a scrollable list, for use with <i>ListView</i>\'s <i>choiceMode</i> attribute.</string>
    <string name="action_add_item">Refresh  feeds</string>
    <string name="action_delete_item">Clear feeds</string>
    <string name="action_news_items">World News</string>
    <string name="action_technology_items">Technology</string>
    <string name="action_sports_items">Sports</string>
    <string name="action_business_items">Business</string>
    <string name="action_health_items">Health</string>
    <string name="action_us_items">US News</string>
    <string name="action_all_items">All Feeds</string>


</resources>
